Fix - Event page card overflow

--- a/web/themes/custom/hm-public-theme/static/sass/pages/_events.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/pages/_events.scss
@@ -10,7 +10,7 @@
   flex-wrap: wrap;
   margin-left: auto;
   margin-right: auto;
-  width: 70%;
+  width: 80%;
 
   @media screen and (max-width: 1024px) {
     width: 90%;
